--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,6 +1,6 @@
 <input [formControl]="control" [type]="type" class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
     duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" [placeholder]="placeholder"
-    [mask]="format" [dropSpecialCharacters]="false"/>
+    [mask]="format" [dropSpecialCharacters]="false" />
 <ng-container *ngIf="control.touched && control.dirty">
     <p *ngIf="control.errors?.pattern" class="text-red-400">
         Password must be at least 8 characters long, have 1
@@ -25,5 +25,8 @@
     </p>
     <p *ngIf="control.errors?.max" class="text-red-400">
         Value too high.
+    </p>
+    <p *ngIf="control.errors?.noMatch" class="text-red-400">
+        Password do not match.
     </p>
 </ng-container>
